--- a/web_server/app/web/.htaccess
+++ b/web_server/app/web/.htaccess
@@ -1,4 +1,4 @@
-<IfModule mod_rewrite.c>
+<IfModule rewrite_module>
     RewriteEngine On
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^(.*)$ index.php [QSA,L]
